--- a/menu.html
+++ b/menu.html
@@ -928,12 +928,7 @@
         </div>
       </div>
       <div class="footer-info">
-        <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
-          &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-        </p>
+      <p class="m-0">Designed by <a href="https://algolizen.com" target="_blank">Algolizen</a></p>
       </div>
     </div>
   </footer>
